# MeshToPointcloudFPS

./: .gitmodules  CMakeLists.txt  readme.md
data/: circle4.pcd  tube.pcd
inc/: CMeshToPcl.hpp  CPureTriMesh.h  SoloProcessor.hpp  cudahelper.hpp  hdf5.hpp  pcl.hpp  pcl_vtk_compatibility.h
kernels/cuda/: kernel.cu
src/: CMeshToPcl.cpp  CPureTriMesh.cpp  FpsCpu.cpp  SoloProcessor.cpp  hdf5.cpp  main.cpp  pcl.cpp
